--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
                 <label>태그</label>
                 <input type="text" id="consult-tag" value="#지현님의 재회 상담" oninput="updateConsult()">
                 <label>이미지 경로</label>
-                <input type="text" id="consult-img" value="c:\Users\user\Desktop\강윤.png" oninput="updateConsult()">
+                <input type="text" id="consult-img" value="강윤.png" oninput="updateConsult()">
 
                 <h3>본문 ({박스} [밑줄])</h3>
                 <label>문단 1</label>
@@ -1124,3 +1124,4 @@
     </script>
 </body>
 </html>
+
