--- a/index.html
+++ b/index.html
@@ -937,6 +937,11 @@
 먼저 연락 왔어요</textarea>
 
                 <h3>프로필</h3>
+                <label>캐릭터 선택</label>
+                <select id="consult-character" onchange="selectCharacter()">
+                    <option value="kangyun">강윤</option>
+                    <option value="leehyun">이현</option>
+                </select>
                 <label>이름/브랜드</label>
                 <input type="text" id="consult-name" value="강윤의 연애보감" oninput="updateConsult()">
                 <label>태그</label>
@@ -1066,6 +1071,27 @@
             document.getElementById('kakao-sub-display').style.fontSize = subSize + 'px';
             document.getElementById('kakao-main-display').style.fontSize = mainSize + 'px';
             document.querySelector('.cta-text-kakao').style.fontSize = ctaSize + 'px';
+        }
+
+        // 캐릭터 데이터
+        const characters = {
+            kangyun: {
+                name: '강윤의 연애보감',
+                image: '강윤.png'
+            },
+            leehyun: {
+                name: '이현의 사주풀이',
+                image: '이현.png'
+            }
+        };
+
+        // 캐릭터 선택
+        function selectCharacter() {
+            const selected = document.getElementById('consult-character').value;
+            const char = characters[selected];
+            document.getElementById('consult-name').value = char.name;
+            document.getElementById('consult-img').value = char.image;
+            updateConsult();
         }
 
         // 상담 결과 업데이트
