--- a/index.html
+++ b/index.html
@@ -946,8 +946,9 @@
                 <input type="text" id="consult-name" value="강윤의 연애보감" oninput="updateConsult()">
                 <label>태그</label>
                 <input type="text" id="consult-tag" value="#지현님의 재회 상담" oninput="updateConsult()">
-                <label>이미지 경로</label>
-                <input type="text" id="consult-img" value="강윤.png" oninput="updateConsult()">
+                <label>이미지 (파일 선택 권장)</label>
+                <input type="file" id="consult-img-file" accept="image/*" onchange="loadImageFile()" style="margin-bottom:8px;">
+                <input type="text" id="consult-img" value="강윤.png" oninput="updateConsult()" placeholder="또는 URL 직접 입력">
 
                 <h3>본문 ({박스} [밑줄])</h3>
                 <label>문단 1</label>
@@ -1085,12 +1086,62 @@
             }
         };
 
+        // 이미지 데이터 URL 저장 (다운로드용)
+        let consultImageDataUrl = null;
+
+        // 이미지를 data URL로 변환
+        function convertImageToDataUrl(imgElement) {
+            return new Promise((resolve) => {
+                const img = new Image();
+                img.crossOrigin = 'anonymous';
+                img.onload = function() {
+                    const canvas = document.createElement('canvas');
+                    canvas.width = img.width;
+                    canvas.height = img.height;
+                    const ctx = canvas.getContext('2d');
+                    ctx.drawImage(img, 0, 0);
+                    try {
+                        resolve(canvas.toDataURL('image/png'));
+                    } catch(e) {
+                        resolve(null);
+                    }
+                };
+                img.onerror = function() {
+                    resolve(null);
+                };
+                img.src = imgElement.src;
+            });
+        }
+
+        // 파일 선택으로 이미지 로드 (CORS 문제 없음)
+        function loadImageFile() {
+            const fileInput = document.getElementById('consult-img-file');
+            const file = fileInput.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    const dataUrl = e.target.result;
+                    consultImageDataUrl = dataUrl;
+                    const imgEl = document.getElementById('consult-img-display');
+                    const placeholder = document.getElementById('consult-placeholder');
+                    imgEl.src = dataUrl;
+                    imgEl.style.display = 'block';
+                    placeholder.style.display = 'none';
+                    document.getElementById('consult-img').value = file.name;
+                };
+                reader.readAsDataURL(file);
+            }
+        }
+
         // 캐릭터 선택
         function selectCharacter() {
             const selected = document.getElementById('consult-character').value;
             const char = characters[selected];
             document.getElementById('consult-name').value = char.name;
             document.getElementById('consult-img').value = char.image;
+            // 파일 선택 초기화
+            document.getElementById('consult-img-file').value = '';
+            consultImageDataUrl = null;
             updateConsult();
         }
 
@@ -1105,12 +1156,20 @@
             const imgEl = document.getElementById('consult-img-display');
             const placeholder = document.getElementById('consult-placeholder');
             if (imgPath && imgPath.trim() !== '') {
-                imgEl.src = imgPath.startsWith('c:') || imgPath.startsWith('C:') ? 'file:///' + imgPath.replace(/\\/g, '/') : imgPath;
+                const newSrc = imgPath.startsWith('c:') || imgPath.startsWith('C:') ? 'file:///' + imgPath.replace(/\\/g, '/') : imgPath;
+                if (imgEl.src !== newSrc) {
+                    imgEl.src = newSrc;
+                    // 이미지 로드 후 data URL로 변환
+                    imgEl.onload = async function() {
+                        consultImageDataUrl = await convertImageToDataUrl(imgEl);
+                    };
+                }
                 imgEl.style.display = 'block';
                 placeholder.style.display = 'none';
             } else {
                 imgEl.style.display = 'none';
                 placeholder.style.display = 'block';
+                consultImageDataUrl = null;
             }
 
             function parseText(text) {
@@ -1135,41 +1194,41 @@
         function downloadCard(cardId) {
             const card = document.getElementById(cardId);
 
-            // 상담 결과 카드인 경우 이미지 임시 숨김
-            let imgEl = null;
-            let placeholder = null;
-            if (cardId === 'card-consult-preview') {
-                imgEl = document.getElementById('consult-img-display');
-                placeholder = document.getElementById('consult-placeholder');
-                if (imgEl) imgEl.style.display = 'none';
-                if (placeholder) placeholder.style.display = 'block';
-            }
-
             html2canvas(card, {
                 scale: 2,
                 useCORS: true,
                 allowTaint: false,
                 backgroundColor: null,
-                logging: false
+                logging: true,
+                onclone: function(clonedDoc) {
+                    // 폰트가 로드될 시간을 주기 위해 클론된 문서에서 폰트 스타일 적용
+                    const style = clonedDoc.createElement('style');
+                    style.textContent = `
+                        * { font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif !important; }
+                    `;
+                    clonedDoc.head.appendChild(style);
+
+                    // 상담 결과 카드인 경우 이미지를 data URL로 교체
+                    if (cardId === 'card-consult-preview' && consultImageDataUrl) {
+                        const clonedImg = clonedDoc.getElementById('consult-img-display');
+                        const clonedPlaceholder = clonedDoc.getElementById('consult-placeholder');
+                        if (clonedImg) {
+                            clonedImg.src = consultImageDataUrl;
+                            clonedImg.style.display = 'block';
+                        }
+                        if (clonedPlaceholder) {
+                            clonedPlaceholder.style.display = 'none';
+                        }
+                    }
+                }
             }).then(canvas => {
                 const link = document.createElement('a');
                 link.download = 'sns_card_' + Date.now() + '.png';
                 link.href = canvas.toDataURL('image/png');
                 link.click();
-
-                // 이미지 복원
-                if (cardId === 'card-consult-preview' && imgEl && imgEl.src) {
-                    imgEl.style.display = 'block';
-                    if (placeholder) placeholder.style.display = 'none';
-                }
             }).catch(err => {
                 alert('이미지 저장 실패: ' + err.message);
                 console.error(err);
-                // 에러 시에도 복원
-                if (cardId === 'card-consult-preview' && imgEl && imgEl.src) {
-                    imgEl.style.display = 'block';
-                    if (placeholder) placeholder.style.display = 'none';
-                }
             });
         }
 
@@ -1177,6 +1236,14 @@
         updatePhone();
         updateKakao();
         updateConsult();
+
+        // 페이지 로드 시 상담결과 이미지 data URL 변환 시도
+        window.addEventListener('load', async function() {
+            const imgEl = document.getElementById('consult-img-display');
+            if (imgEl && imgEl.src && imgEl.complete) {
+                consultImageDataUrl = await convertImageToDataUrl(imgEl);
+            }
+        });
     </script>
 </body>
 </html>
